[package]
name = "ring-vec"
version = "0.1.1"
description = "A zero-dependency, no-std compatible, producer-consumer, fixed-size, item-oriented ring buffer backed by a vector."
keywords = ["ring", "buffer", "queue", "vector"]
categories = ["data-structures", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/ring-vec"
repository = "https://github.com/irrustible/ring-vec"
documentation = "https://docs.rs/ring-vec"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
